# mario

./: .gitignore  CONTRIBUTING.md  README.md  mario.rar
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  refactor_request.md
docs/: architecture.md
mario/: CMakeLists.txt  FinalReport.pptx  LevelLoader.cpp  LevelLoader.h  ProgressReport.pptx  README.md  SDL_Plotter.h  Sam's Collision Engine  UsersManual.docx  coinToken.txt  functions.cpp  functions.h  game_client.cpp  game_logic.cpp  game_logic.h  game_server.cpp  main.cpp  marioJump.txt  powBlock.txt
mario/.github/workflows/: ci.yml
mario/assets/: enemyPixel.txt  foo.txt  gameOver.txt  marioStill.txt  scoreBoard.txt
mario/assets/levels/: level1.json  level1.toml  level1.yaml
mario/include/: functions.h
mario/net/protocol/: protocol.cpp  protocol.h
mario/src/: CollisionSystem.cpp  CollisionSystem.h  GameRulesSystem.cpp  GameRulesSystem.h  GameTypes.h  InputSystem.cpp  InputSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  SDL_Plotter.cpp  functions.cpp  main.cpp
mario/tests/: README.md  test_game_logic.cpp
